# watch-app

./: .gitignore  Dockerfile  README.md  docker-compose.yml
design/: mockup.html
plan/: 1_requirements-architecture.html  2_interface-design.html  3_build-plan.html  4_v2-build-plan.html  nav.js  style.css
research/: apple-watch-dashboard-research.md
server/: db.py  importer.py  ingest.py  main.py  pyproject.toml  queries.py  scores.py  seed_demo.py
server/tests/: conftest.py  test_health.py  test_importer.py  test_ingest.py  test_queries.py  test_scores.py  test_v2.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  WorkoutMap.jsx  api.js  chart-utils.js  chart-utils.test.js  charts.jsx  index.css
